--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--ICONE DA PAGINAS-->
-    <link rel="shortcut icon" href="">
+    <link rel="shortcut icon" href="./src/assets/icone.png">
     <!--LINK EXTERNO CSS-->
     <link rel="stylesheet" href="./src/css/estilo.css">
 
