Criando o script do projeto

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="shadow"></div>
             </div>
         </section>
-        <section id="sobre">
+        <section id="sobre" onmouseover="medidas()">
             <div class="medicao">
                 <div class="medicao-item">
                     <span id="contador"></span>
@@ -61,8 +61,8 @@
                 <div class="info">
                     <h2 class="info-titulo">Fique por dentro das novidades!</h2>
                 </div>
-                <input type="email" id="email" placeholder="Cadastre seu e-mail" class="info-email">
-                <p class="mensagem-hidden">Obrigado Meu Caro(a)! Recebemos seu e-mail!</p>
+                <form><input type="email" id="email" placeholder="Cadastre seu e-mail"></form>
+                <p class="mensagem">Obrigado Meu Caro(a)! Recebemos seu e-mail!</p>
             </div>
         </section>
 
